--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "build": "vite build && tsc --emitDeclarationOnly --outDir dist/types",
+    "type-check": "tsc --noEmit",
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
